--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ email: want.ai.hpc@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Join HPC and AI experts to learn how to train neural networks at an unprecedented 
   scale with your existing infrastructure. #WANT #NeurIPS2023.
-baseurl: "/neurips2023" # the subpath of your site, e.g. /blog
+baseurl: "/" # the subpath of your site, e.g. /blog
 url: "https://want-ai-hpc.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 # twitter_username: jekyllrb
 github_username:  want-ai-hpc
