--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,9 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Workshop on Advancing Neural Network Training @ NeurIPS 2023
+# title: Workshop on Advancing Neural Network Training @ NeurIPS 2023
+title: "Computational Efficiency, Scalability, and Resource Optimization"
+title_footer: "Workshop on Advancing Neural Network Training (WANT @ NeurIPS 2023): Computational Efficiency, Scalability, and Resource Optimization"
 email: want.ai.hpc@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Join HPC and AI experts to learn how to train neural networks at an unprecedented 
