--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,8 @@
 # in the templates via {{ site.myvariable }}.
 
 # title: Workshop on Advancing Neural Network Training @ NeurIPS 2023
-title: "Computational Efficiency, Scalability, and Resource Optimization"
+# title: "Computational Efficiency, Scalability, and Resource Optimization"
+title: "Workshop on Advancing Neural Network Training (WANT): Computational Efficiency, Scalability, and Resource Optimization"
 title_footer: "Workshop on Advancing Neural Network Training (WANT @ NeurIPS 2023): Computational Efficiency, Scalability, and Resource Optimization"
 email: want.ai.hpc@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
